tests/NormalTests/paczka1/fuzzy1/67851980.err
Error in line 2: fCWh S201 33,1
Error in line 4: fCWh S620 33,9
Error in line 3: UC7f2 S620 56,5
Error in line 6: fDRxR6hlw S201 65,3
Error in line 20: iMr0m S620 4,5
Error in line 16: fDRxR6hlw A619 4,4
Error in line 25: fCWh A254 0,7
Error in line 28: 0qV3S33Tg S201 93,2
Error in line 31: 0qV3S33Tg A254 18,4
